skip_test = find_program('common/skip-test.sh')

subdir('common')

subdir('libtracker-miners-common')
subdir('libtracker-miner')

if have_tracker_extract
  subdir('libtracker-extract')
endif

subdir('services')

test_bus_conf_file = configure_file(
  input: 'test-session-bus.conf.in',
  output: 'test-session-bus.conf',
  configuration: conf)

if get_option('functional_tests')
  subdir('functional-tests')
endif
